<resources>
    <string name="app_name">SahilShah_COMP304_Assignment2</string>
    <string name="btnName">Enter</string>
    <string name="apartment">Apartment</string>
    <string name="detached_home">Detached Home</string>
    <string name="semi_detached_home">Semi-Detached Home</string>
    <string name="condominium">Condominium</string>
    <string name="town_house">Town House</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="btn_checkout">Checkout</string>
    <string name="checkout_title">Checkout</string>
    <string name="apartment_listings">Apartment Listings</string>
    <string name="place_order">Place Order</string>
    <string name="order_details">Order Details:</string>
    <string name="condominium_listings">Condominium listings</string>
    <string name="detached_house_listings">Detached House Listings</string>
    <string name="town_house_listings">Town House Listings</string>
    <string name="payment_title">Enter Payment Details \n(Credit Card/Debit Card)</string>
    <string name="card_number">Card Number</string>
    <string name="name_on_the_card">Name on the Card</string>
    <string name="expiry_date">Expiry Date (MM/YY)</string>
    <string name="enter_cvv">Enter CVV</string>
    <string name="address">Address</string>
</resources>