<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity">
    <TextView
        android:id="@+id/tvPaymentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_title"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/et_credit_card_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/card_number"
        android:inputType="number"
        android:maxLength="16"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPaymentTitle"
        android:layout_marginTop="160dp"/>

    <EditText
        android:id="@+id/et_cardholder_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name_on_the_card"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_credit_card_number" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/expiry_date"
        android:id="@+id/et_expiry_date"
        android:inputType="date"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_cardholder_name"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_cvv"
        android:id="@+id/et_cvv"
        android:inputType="number"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_expiry_date"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_address"
        android:inputType="text"
        android:hint="@string/address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_cvv"/>

    <Button
        android:id="@+id/btnPlaceOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>